<com.emilsjolander.components.StickyScrollViewItems.StickyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            map:mapType="normal"
            map:liteMode="true"
            android:elevation="1dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackgroundFaded"
            android:layout_below="@+id/map"
            android:id="@+id/top_divider"
            android:alpha=".3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ribbon_phone"
            android:layout_below="@+id/top_divider"
            android:tag="sticky"
            android:elevation="1dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/colorSecondaryBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ribbon_direction"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/icon_direction"
                    android:src="@drawable/directions"
                    android:layout_centerVertical="true"
                    android:paddingRight="8dp"
                    android:contentDescription="@string/desc_directions" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_directions"
                    android:id="@+id/label_direction"
                    android:layout_toRightOf="@+id/icon_direction"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:id="@+id/direction"
                    android:textSize="13sp"
                    android:layout_toRightOf="@+id/icon_direction"
                    android:layout_below="@+id/label_direction" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBackgroundFaded"
                android:layout_below="@+id/ribbon_direction"
                android:id="@+id/divider_contact"
                android:alpha=".3"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ribbon_phone"
                android:background="?attr/selectableItemBackground"
                android:layout_below="@+id/divider_contact"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/icon_phone"
                    android:src="@drawable/phone"
                    android:layout_centerVertical="true"
                    android:paddingRight="8dp"
                    android:contentDescription="@string/desc_call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_call"
                    android:id="@+id/label_phone"
                    android:layout_toRightOf="@+id/icon_phone"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:id="@+id/phone"
                    android:textSize="13sp"
                    android:layout_toRightOf="@+id/icon_phone"
                    android:layout_below="@+id/label_phone" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/divider_hours"
            android:layout_below="@+id/ribbon_phone"
            android:tag="sticky"
            android:background="@color/colorBackground"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_op"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                android:id="@+id/label_operating" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hours"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/label_hours"
                android:layout_toRightOf="@+id/label_operating" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/hours_container"
            android:layout_below="@+id/divider_hours"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sun"
                android:id="@+id/hours_sun_label"
                android:minEms="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/hours_sun"
                android:layout_alignTop="@+id/hours_sun_label"
                android:layout_toRightOf="@+id/hours_sun_label"
                android:paddingLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mon"
                android:id="@+id/hours_mon_label"
                android:layout_below="@+id/hours_sun_label"
                android:minEms="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/hours_mon"
                android:layout_alignTop="@+id/hours_mon_label"
                android:layout_toRightOf="@+id/hours_mon_label"
                android:paddingLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tues"
                android:id="@+id/hours_tues_label"
                android:layout_below="@+id/hours_mon_label"
                android:minEms="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/hours_tues"
                android:layout_alignTop="@+id/hours_tues_label"
                android:layout_toRightOf="@+id/hours_tues_label"
                android:paddingLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_wed"
                android:id="@+id/hours_wed_label"
                android:layout_below="@+id/hours_tues_label"
                android:minEms="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/hours_wed"
                android:layout_alignTop="@+id/hours_wed_label"
                android:layout_toRightOf="@+id/hours_wed_label"
                android:paddingLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_thurs"
                android:id="@+id/hours_thurs_label"
                android:layout_below="@+id/hours_wed_label"
                android:minEms="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/hours_thurs"
                android:layout_alignTop="@+id/hours_thurs_label"
                android:layout_toRightOf="@+id/hours_thurs_label"
                android:paddingLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fri"
                android:id="@+id/hours_fri_label"
                android:layout_below="@+id/hours_thurs_label"
                android:minEms="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/hours_fri"
                android:layout_alignTop="@+id/hours_fri_label"
                android:layout_toRightOf="@+id/hours_fri_label"
                android:paddingLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sat"
                android:id="@+id/hours_sat_label"
                android:layout_below="@+id/hours_fri_label"
                android:minEms="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/hours_sat"
                android:layout_alignTop="@+id/hours_sat_label"
                android:layout_toRightOf="@+id/hours_sat_label"
                android:paddingLeft="8dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/divider_details"
            android:tag="sticky"
            android:layout_below="@+id/hours_container"
            android:contextClickable="false"
            android:background="@color/colorBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detailed"
                android:paddingLeft="16dp"
                android:textColor="@color/colorPrimaryText"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="20sp"
                android:id="@+id/label_detailed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_info"
                android:textColor="@color/colorPrimaryText"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/label_info"
                android:layout_toRightOf="@+id/label_detailed" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:id="@+id/details"
            android:layout_below="@+id/divider_details"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorPrimaryText" />

    </RelativeLayout>
</com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>
